# learningPulumi

./: .gitignore  Pulumi.yaml  __main__.py  pyproject.toml  requirements.txt
