[project]
name = "learningPulumi"
version = "0.1.0"
description = "Add a short description here"
requires-python = ">= 3.11"
dependencies = [ "pulumi>=3.133.0,<3.134", "pulumi-aws>=6.52.0,<6.53", "pulumi-docker>=4.5.5,<4.6", "streamlit>=1.38.0,<1.39", "matplotlib>=3.9.2,<3.10"]

[tool.setuptools.packages.find]
exclude = ["images", "streamlit_app"]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
learningPulumi = { path = ".", editable = true }

[tool.pixi.tasks]
pul_up = "pulumi up"
pul_new = "pulumi new aws-python --force"
